...
            android:tag="progressBar"
            android:visibility="invisible"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- region LOGIN FORM -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layoutLoginForm"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:visibility="gone"
...
                        android:layout_marginStart="@dimen/activity_vertical_margin_x5"
                        android:layout_marginEnd="@dimen/activity_vertical_margin_x5"
                        android:hint="@string/email_add_lbl"
                        app:endIconMode="clear_text">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/tfLoginEmail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto_condensed_regular"
                            android:selectAllOnFocus="false"
                            android:singleLine="true"
                            android:text="@={authenticateViewModel.emailOrPhone}"
...
                        android:layout_marginTop="@dimen/activity_vertical_margin_half"
                        android:layout_marginEnd="@dimen/activity_vertical_margin_x5"
                        android:hint="@string/pass_add_lbl"
                        app:endIconMode="clear_text">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/tfLoginPass"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto_condensed_regular"
                            android:inputType="textPassword"
                            android:selectAllOnFocus="false"
                            android:singleLine="true"
                            android:text="@={authenticateViewModel.password}"
                            android:textSize="@dimen/text_size_large" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvLoginErrorMessage"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/activity_vertical_margin_x5"
                        android:layout_marginTop="@dimen/activity_vertical_margin"
                        android:layout_marginEnd="@dimen/activity_vertical_margin_x5"
                        android:fontFamily="@font/roboto_condensed_regular"
                        android:textAlignment="center"
                        android:textColor="@color/design_default_color_error"
                        android:textSize="@dimen/text_size_medium" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnLoginSubmit"
                        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                        android:layout_width="match_parent"
                        android:layout_height="65dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginStart="@dimen/activity_vertical_margin_x5"
                        android:layout_marginTop="@dimen/activity_vertical_margin"
...
                        android:textAlignment="center"
                        android:textColor="@color/secondary_text"
                        android:textSize="@dimen/text_size_large"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/btnGoToSignupView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/activity_vertical_margin"
                        android:fontFamily="@font/roboto_condensed_bold"
                        android:padding="10dp"
...

        </androidx.constraintlayout.widget.ConstraintLayout>
        <!-- endregion LOGIN FORM -->

        <!-- region SIGN-UP FORM -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layoutRegForm"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

...
                    android:textAlignment="center"
                    android:textColor="@color/secondary_text"
                    android:textSize="@dimen/text_size_large"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/btnGoToLoginView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:fontFamily="@font/roboto_condensed_bold"
                    android:padding="10dp"
...
