...
    <string name="reg_name_lbl">Name</string>
    <string name="email_add_lbl">Email Address</string>
    <string name="pass_add_lbl">Password</string>
    <string name="title_weather">GWeather</string>
    <string name="reg_title">Nice meeting you here, so let\'s sign-up!</string>
    <string name="unable_to_register_user">Unable to register user. Please contact your administrator.</string>
    <string name="login_provide_email_pass">Please provide both email and password.</string>
    <string name="login_invalid_email_or_pass">Unable to login. Please check your email address or password.</string>
    <string name="login_create_account_success">Account successfully created.</string>

    <string name="online_required">You need to be online to perform action.</string>

    <string name="unable_to_get_current_weather">Unable to get the current weather. Check your API key or internet connection and try again.</string>
    <string name="unable_to_load_weather_records">Unable to get the weather records. Check your internet connection and try again.</string>
...
